--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "relic",
   "version": "1.0.0",
   "main": "server.js",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.cjs"
   },
   "author": "",
   "license": "ISC",
